--- a/style.css
+++ b/style.css
@@ -192,13 +192,17 @@
     padding: 10px;
   }
   
-  @media (max-width: 1200px) {
-    .status-header {
-      flex-direction: column;
+  @media screen and (max-width: 768px) {
+    .sidebar {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
     }
   
-    .status-card {
-      margin: 10px 0;
+    .sidebar a {
+      padding: 10px;
+      font-size: 14px;
     }
   }
   
